[package]
name = "jira-clean"
version = "0.1.0"
edition = "2021"
authors = ["Diaa Kasem<me@diaa.me>"]
description = "A tool to clean up Jira issues"
repository = "https://github.com/diaakasem/jira-clean"
license = "MIT"
readme = "README.md"
keywords = ["jira", "clean", "issues", "description"]

[dependencies]
regex = "1.5.4"
